indus/test/test_examples/type_errors/empty_list.tpc
init {
    bool[10] l = [];
} 
telemetry {} 
check {}